if문 case문으로 변경